--- a/rain-security-rainbow/src/main/resources/resources/rain-signIn.html
+++ b/rain-security-rainbow/src/main/resources/resources/rain-signIn.html
@@ -5,7 +5,7 @@
     <title>登录</title>
 </head>
 <body>
-    <h2>表单登录</h2>
+    <h2>用户名&密码 登录</h2>
     <div>
         <form method="POST" action="/authentication/form">
             <table>
@@ -37,5 +37,30 @@
             </table>
         </form>
     </div>
+
+    <h2>短信验证码 登录</h2>
+    <div>
+        <form method="POST" action="/authentication/mobile">
+            <table>
+                <tr>
+                    <td>手机号：</td>
+                    <td><input type="text" name="mobile" value="15013618287"></td>
+                </tr>
+                <tr>
+                    <td>短信验证码：</td>
+                    <td>
+                        <input type="text" name="smsCode">
+                        <a href="/code/sms?mobile=15013618287" target="_blank">获取验证码</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <button type="submit" >登录</button>
+                    </td>
+                </tr>
+            </table>
+        </form>
+    </div>
+
 </body>
 </html>
