Spring Social QQ&微信登录模式的实现 part01

--- a/rain-security-rainbow/src/main/resources/resources/rain-signIn.html
+++ b/rain-security-rainbow/src/main/resources/resources/rain-signIn.html
@@ -62,5 +62,21 @@
         </form>
     </div>
 
+    <h2>社交登录</h2>
+    <div>
+        <table>
+            <tr>
+                <td>
+                    <a href="/auth/callback.do" target="_blank">QQ登录</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/auth/weixin" target="_blank">微信登录</a>
+                </td>
+            </tr>
+        </table>
+    </div>
+
 </body>
 </html>
