--- a/rain-security-browser/src/main/resources/resources/rain-logout.html
+++ b/rain-security-browser/src/main/resources/resources/rain-logout.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>注销</title>
+    <title>LogOut</title>
 </head>
 <body>
-    <h2>注销操作</h2>
-    <a href="/signOut">退出</a>
+默认的Logout页面
 </body>
 </html>
