--- a/rain-security-rainbow/src/main/resources/resources/rain-signUp.html
+++ b/rain-security-rainbow/src/main/resources/resources/rain-signUp.html
@@ -7,7 +7,7 @@
 <body>
     <h2>Demo注册页</h2>
     <div>
-        <form action="/user/regist" method="post">
+        <form action="/user/register" method="post">
             <table>
                 <tr>
                     <td>用户名:</td>
